src/App.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

*{
  margin: 0;
  padding: 0;
  font-family: "Poppins", sans-serif;
}

.header-main{
  background-color: #2B2B2B;
  display: flex;
  justify-content: space-between;
  padding: 33px 50px;
}

.wallet{
  color: #fff;
  font-weight: 600;
  font-size: 24px;
}

.sign-up{
  text-decoration: none;
  font-size: 18px;
  font-weight: 300;
  color: #fff;
}

.log-in{
  padding: 9px 61px;
  background-color: #BFAFF2;
  border-radius: 15px;
  border: none;font-size: 18px;
}

.h-buttons{
  display: flex;
  gap: 30px;
  align-items: center;
}

.main-wrapper{
  background-color: #2B2B2B;
  padding: 77px 100px;
}

.home-screen{
  display: flex;
}

.hs-left{
  width: 50%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}
.hs-right{
  width: 50%;
}

.hs-bold{
  font-size: 60px;
  font-weight: 600;
  color: #fff;
  margin: 28px 0;
  max-width: 465px;
}

.hs-desc{
  font-size: 18px;
  color: rgb(255, 255, 255, 0.4);
  margin-bottom: 56px;
  max-width: 465px;
}

.hs-button{
  border-radius: 15px;
  background-color: #F8D57E;
  color: #333333;
  font-size: 18px;
  padding: 9px 38px;
  cursor: pointer;
  border: none;
}

.hs-right{
  display: flex;
  justify-content: flex-end;
}

.line{
  background-color: rgb(255, 255, 255, 0.2);
  height: 1px;
  width: 100%;
}

.brands-wrapper{
  background-color: #2B2B2B;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 90px;
}

.brands-img{
  margin: 67px 178px;
  width: 930px;
}

.ss-main{
  padding: 100px;
  background-color: #2B2B2B;
}

.ss-card{
  background-color: #FDF5DF;
  border-radius: 20px;
  height: 500px;
  display: flex;
  justify-content: center;
  align-items: flex-end;
}

.mini-card{
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 8px;
  margin-top: 16px;
}

.mini-bold{
  color: #fff;
  font-size: 18px;
  font-weight: 500;
  text-align: center;
}

.mini-desc{
  color: rgb(255, 255, 255, 0.4);
  font-size: 18px;
  text-align: center;
  max-width: 255px;
}

.cs-main{
  padding: 50px 123px;
  background-color: #2B2B2B;
}

.cs-wrapper{
  display: flex;
  justify-content: space-around;
  gap: 24px;
  flex-wrap: wrap;
}

.tm-main{
  padding: 30px 100px;
  background-color: #2B2B2B;
}

.tm-card{
  padding: 83px 162px;
  background-color: #BFAFF2;
  border-radius: 20px;
  display: flex;
  flex-direction: column;
  gap: 48px;
}

.tm-bold{
  font-size: 24px;
  font-weight: 600;
  color: #2B2B2B;
  text-align: start;
}

.tm-creds{
  display: flex;
  gap: 24px;
  align-items: center;
}

.tm-name{
  color: rgb(43, 43, 43, 0.4);
  text-align: start;
}

.tm-img{
  border: 1px solid #BCBCBC;
  border-radius: 50%;
}

.tm-details{
  display: flex;
  flex-direction: column;
  gap: 10px;
  align-items: flex-start;
}

.f-email-input{
  background-color: #333333;
  color: rgb(255, 255, 255, 0.4);
  border: none;
  border-radius: 15px;
  font-size: 18px;
  padding: 8px 24px;
}

.f-links{
  display: flex;
  gap: 16px;
}

.f-links a{
  color: #fff;
  text-decoration: none;
  font-size: 18px;
  font-weight: 600;
}

.footer-main{
  padding: 50px;
  background-color: #2B2B2B;
  display: flex;
  flex-direction: column;
  gap: 32px;
}

.f-bot{
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.f-email{
  display: flex;
  gap: 16px;
}

.line2{
  display: flex;
  justify-content: center;
}

.log-in{
  cursor: pointer;
}

.hs-right-img{
  width: 500px;
  border-radius: 15px;
}

.hs-button:hover{
  background-color: #E8BF59;
}

.log-in:hover{
  background-color: #A490E5;
}

@media (max-width: 1180px){
  .hs-right img{
    width: 400px;
    height: 346px;
  }
  .hs-bold{
    font-size: 48px;
  }
  .hs-desc{
    font-size: 14px;
  }
  .brands-img{
    width: 600px;
  }
  .ss-img{
    width: 900px;
  }
  .f-bot{
    flex-direction: column-reverse;
    align-items: flex-start;
  }
  .f-email{
    margin-bottom: 32px;
    flex-wrap: wrap;
  }
  .f-links{
    flex-wrap: wrap;
  }
}

@media (max-width: 976px){
  .home-screen{
    flex-direction: column;
    align-items: center;
  }
  .hs-left{
    margin-bottom: 50px;
    align-items: center;
    text-align: center;
    width: 100%;
  }
  .hs-right{
    align-items: center;
    width: 100%;
    justify-content: center;
  }
  .ss-img{
    width: 530px;
  }
  .ss-card{
    height: 340px;
  }
  .brands-img{
    width: 530px;
  }
  .tm-card{
    padding: 40px 60px;
  }
  .main-wrapper{
    padding: 40px;
  }
}

@media (max-width: 532px){
.f-email-input{
  width: 100%;
}
.log-in{
  width: 100%;
}
.f-links{
  flex-direction: column-reverse;
}
.h-buttons{
  display: none;
}
.brands-img{
  width: 340px;
}
.ss-img{
  width: 340px;
}
.hs-right-img{
  width: 335px !important;
  height: 299px !important  ;
}
.ss-main{
  padding: 40px;
}
.ss-card{
  height: 200px;
}
.cs-main{
  padding: 50px 40px;
}
.tm-main{
  padding: 30px 40px;
}
.tm-card{
  padding: 20px;
}
.hs-bold{
  font-size: 38px;
}
.form-container{
  padding: 40px 30px !important;
}
}

.form-container {
  display: flex;
  flex-direction: column;
  max-width: 400px;
  gap: 16px;
  background-color: rgb(50, 54, 57);
  padding: 40px;
  border-radius: 15px;
  color: #fff;
}

.input-group {
  margin-bottom: 16px;
}

.input-field {
  width: 94%;
  padding: 8px;
  border: 1px solid transparent;
  border-radius: 8px;
  outline: none;
}

.input-field:focus {
  box-shadow: none;
}

.checkbox-group {
  display: flex;
  align-items: center;
  gap: 8px;
}

.terms-link {
  color: #E8BF59;
  text-decoration: underline;
}

.terms-link:hover {
  color: #F8D57E;
}

.submit-button {
  padding: 10px 16px;
  background-color: #E8BF59;
  color: #000;
  font-weight: 500;
  font-size: 16px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

.submit-button:hover {
  background-color: #F8D57E;
}

.form-wrapper {
  padding: 40px 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #2B2B2B;
}
.error{
color: red;
font-size: 14px;
font-weight: 200;
height: 20px; 
line-height: 20px;
}

.login-prompt {
  text-align: center; 
  font-weight: 400;
  font-size: 14px;
}

.login-link {
  color: #E8BF59; 
  text-decoration: none; 
  cursor: pointer;
}

.login-link:hover {
  text-decoration: underline; 
}

.tnc-main{
  display: flex;
  flex-direction: column;
  padding: 0 120px;
  background-color: #2B2B2B;
}

.tnc-header, .tnc-subheader{
  display: flex;
  justify-content: center;
}

.tnc-header{
  text-align: center;
}

.tnc-subheader{
  margin-bottom: 36px;
}

.tnc-bold{
  margin-bottom: 4px;
}

.tnc-desc{
  margin-bottom: 24px;
}

@media(max-width: 620px){
  .tnc-main{
    padding: 0 40px;
  }
}

